(BE) added E2E-Tests